# test-teamcore

./: .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md  calcular_kpi.py  cliente_http.py  generar_datos.py  generar_reporte.py  pyproject.toml
docs/: README.md  project-charter.md
docs/adr/: 0001-record-architecture-decisions.md  0002-runtime-python-and-packaging.md  0003-pragmatic-layered-architecture.md  0004-http-requests-over-browser-automation.md  0005-configuration-and-secrets.md  0006-logging-strategy.md  0007-error-handling-retries-idempotency.md  0008-cli-design-and-parameters.md  0009-data-contracts-and-formats.md  0010-reporting-pandas-matplotlib.md  0011-testing-strategy-and-tooling.md  0012-dependency-boundary-allowed-libraries.md  0013-pentaho-pdi-in-scope.md  0014-selenium-adapter-as-alternative.md  0015-python-3-13-3-14-compatibility.md  README.md
docs/architecture/: architecture-overview.md  component-model.md  data-flow.md  project-structure.md
docs/contracts/: data-contracts.md
docs/no-tecnico/: 01-estructura-del-proyecto.md  02-codigo-explicado.md  03-dominio-explicado.md  04-infraestructura-explicada.md  05-cli-de-datos-explicada.md  06-cliente-http-explicado.md  06b-adaptador-selenium-explicado.md  07-reporte-explicado.md  08-etl-pdi-explicado.md  09-verificacion-endurecimiento-explicado.md  10-cierre-final-explicado.md  11-validacion-y-correcciones-explicado.md  README.md
docs/project-plan/: roadmap-and-phases.md  validacion-criterios-enunciado.md
docs/requirements/: functional-requirements.md  non-functional-requirements.md  requirements-traceability-matrix.md
docs/runbook/: operations-runbook.md
docs/specs/: SPEC-000-template.md  SPEC-001-http-client.md  SPEC-002-generar-datos.md  SPEC-003-calcular-kpi.md  SPEC-004-generar-reporte.md  SPEC-005-etl-pdi.md
docs/testing/: guia-de-pruebas-por-paso.md  test-strategy.md
docs/use-cases/: use-cases.md
etl_pdi/: README.md  j_daily_kpi.kjb  t_load_kpi.ktr
etl_pdi/config/: kettle.properties.example
etl_pdi/sql/: ddl.sql
src/teamcore_http_kpi/: __init__.py  config.py  logging_config.py
src/teamcore_http_kpi/application/: __init__.py  build_report.py  compute_kpi.py  generate_data.py  http_scenarios.py  ports.py
src/teamcore_http_kpi/cli/: __init__.py  _common.py  calcular_kpi.py  cliente_http.py  generar_datos.py  generar_reporte.py
src/teamcore_http_kpi/domain/: __init__.py  endpoints.py  errors.py  generation.py  kpi.py  models.py
src/teamcore_http_kpi/infrastructure/: __init__.py
src/teamcore_http_kpi/infrastructure/http/: __init__.py  client.py  selenium_client.py  tasks.py
src/teamcore_http_kpi/infrastructure/io/: __init__.py  artifact_writer.py  csv_repository.py  jsonl_repository.py
src/teamcore_http_kpi/infrastructure/reporting/: __init__.py  charts.py  html_report.py
tests/: conftest.py
tests/browser/: test_selenium_client_live.py
tests/data/: bitacora_min.jsonl  kpi_expected.csv
tests/e2e/: test_calcular_kpi_cli.py  test_cliente_http_cli.py  test_generar_datos_cli.py  test_generar_reporte_cli.py  test_volume_smoke.py
tests/integration/: test_artifact_writer.py  test_charts.py  test_csv_repository.py  test_etl_pdi_structure.py  test_html_report.py  test_http_client.py  test_http_scenarios.py  test_http_tasks.py  test_jsonl_repository.py  test_selenium_tasks_interop.py
tests/unit/: test_architecture_layering.py  test_endpoints.py  test_errors.py  test_generation.py  test_kpi.py  test_logging.py  test_selenium_client.py
