# Empaquetado y configuración de tooling del proyecto.
# Las decisiones aquí codificadas se justifican en:
#   docs/adr/0002-runtime-python-and-packaging.md
#   docs/adr/0011-testing-strategy-and-tooling.md
#   docs/adr/0012-dependency-boundary-allowed-libraries.md
#   docs/adr/0015-python-3-13-3-14-compatibility.md
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "teamcore-http-kpi"
version = "0.1.0"
description = "Cliente HTTP automatizado, cálculo de KPIs y reporte HTML (test técnico Teamcore)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Equipo de Ingeniería" }]

# --- Dependencias de runtime -------------------------------------------------
# Estrictamente dentro de la frontera de librerías permitidas por el enunciado.
# selenium se usa como adaptador alternativo de HttpPort, no como cliente por
# defecto (ver ADR-0014). playwright queda permitida pero sin usar.
dependencies = [
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "lxml>=5.1",
    # Rango elegido para dar soporte a Python 3.11-3.14 (ver ADR-0015):
    # <2.3.5 no publica wheels Windows para cp313/cp314; >=2.5 usa `type` (PEP 695)
    # en sus stubs, lo que rompe mypy con python_version=3.11.
    "numpy>=2.3.5,<2.5",
    "pandas>=2.1",
    "matplotlib>=3.8",
    "selenium>=4.20",
]

[project.optional-dependencies]
# Herramientas de desarrollo (no forman parte del runtime entregable).
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "responses>=0.25",     # dobles HTTP para probar el cliente sin red real
    "ruff>=0.4",
    "mypy>=1.9",
    "types-requests>=2.31",
    "lxml-stubs>=0.5",
]

# Puntos de entrada de consola (además de los scripts raíz que exige el enunciado).
[project.scripts]
cliente-http = "teamcore_http_kpi.cli.cliente_http:main"
generar-datos = "teamcore_http_kpi.cli.generar_datos:main"
calcular-kpi = "teamcore_http_kpi.cli.calcular_kpi:main"
generar-reporte = "teamcore_http_kpi.cli.generar_reporte:main"

[tool.setuptools.packages.find]
where = ["src"]

# --- Ruff (lint + formato) ---------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
# Reglas: errores (E,F), imports (I), bugbear (B), comprehensions (C4),
# pyupgrade (UP), naming (N), simplify (SIM), pathlib (PTH).
select = ["E", "F", "I", "B", "C4", "UP", "N", "SIM", "PTH"]
ignore = []

[tool.ruff.lint.pydocstyle]
convention = "google"

# --- Mypy (tipado estricto) --------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
pretty = true
files = ["src", "tests"]

# pandas/matplotlib no exponen stubs completos: se aíslan sin relajar el resto.
[[tool.mypy.overrides]]
module = ["matplotlib.*", "pandas.*"]
ignore_missing_imports = true

# --- Pytest ------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra -q --strict-markers -m 'not network and not browser'"
markers = [
    "unit: pruebas unitarias puras (sin E/S ni red)",
    "integration: pruebas de integración con ficheros temporales o dobles HTTP",
    "e2e: pruebas de extremo a extremo sobre las CLIs",
    "network: requieren red real contra httpbin.org (excluidas por defecto)",
    "browser: requieren un navegador Chrome/Edge real (Selenium, excluidas por defecto)",
]

[tool.coverage.run]
source = ["teamcore_http_kpi"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
